--- a/src/main/resources/templates/edit.hbs
+++ b/src/main/resources/templates/edit.hbs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>SparkBlog</title>
+    <title>{{#if slug}}Edit Entry{{else}}Add New Entry{{/if}} - SparkBlog</title>
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Noto+Sans:700,400' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../../../../public/css/normalize.css">
-    <link rel="stylesheet" href="../../../../public/css/site.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
 <header>
@@ -21,15 +21,26 @@
 <section>
     <div class="container">
         <div class="edit-entry">
-            <h2>Edit Entry</h2>
-            <form action="/edit/{{slug}}" method="post">
-                <label for="title"> Title</label>
-                <input type="text" name="title" id="title" value="{{title}}"><br>
-                <label for="entry">Entry</label>
-                <textarea rows="5" name="content" id="entry">{{content}}</textarea>
+            <h2>{{#if slug}}Edit Entry{{else}}Add New Entry{{/if}}</h2>
+
+            <!-- Edit or Add Form -->
+            <form action="{{#if slug}}/entry/{{slug}}/edit{{else}}/add{{/if}}" method="post">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" value="{{title}}" required><br>
+
+                <label for="body">Entry</label>
+                <textarea rows="5" name="body" id="body" required>{{body}}</textarea>
+
                 <input type="submit" value="Save Entry" class="button">
                 <a href="/" class="button button-secondary">Cancel</a>
             </form>
+
+            <!-- Delete Button -->
+            {{#if slug}}
+                <form action="/entry/{{slug}}/delete" method="post" onsubmit="return confirm('Are you sure you want to delete this entry?');">
+                    <input type="submit" value="Delete Entry" class="button button-danger">
+                </form>
+            {{/if}}
         </div>
     </div>
 </section>
@@ -41,3 +52,6 @@
 </footer>
 </body>
 </html>
+
+
+
