--- a/src/main/resources/templates/password.hbs
+++ b/src/main/resources/templates/password.hbs
@@ -6,8 +6,8 @@
     <title>SparkBlog</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Noto+Sans:700,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="/site.css">
 </head>
 <body>
 <header>
