fixed detail title

--- a/src/main/resources/templates/detail.hbs
+++ b/src/main/resources/templates/detail.hbs
@@ -16,6 +16,7 @@
 <section>
     <div class="container">
         <article>
+            <h1>{{title}}</h1>
             <time datetime="{{createdAt}}">{{createdAt}}</time>
             <p>{{body}}</p>
         </article>
